# bootstrap-your-second-brain

./: .gitignore  AGENTS.md  CLAUDE.md  NOTES-FOR-README.md  README.md  SETUP.md  TOOLS.md  config.example.json  todos.md
.obsidian/: community-plugins.json  hotkeys.json
Log/: README.md
Profile/: 00-overview.md  identity.md  working-with-me.md
Projects/: README.md
docs/deck/: bootstrapping-your-second-brain.html  bootstrapping-your-second-brain.md
scripts/: ask.sh  bootstrap.sh  com.brain.ingest.plist  config.py  digest.py  doctor.sh  github_ingest.py  goodreads_ingest.py  google_drive_auth.py  google_drive_meetings_ingest.py  ingest-daily.sh  lib.sh  log.sh  ontology.yaml  substack_ingest.py  verify_goodreads_books.py  x_bookmarks_cleanup.py  x_bookmarks_ingest.py
scripts/intelligence/: brief.sh  brief_context.py  build_decisions_index.py  build_ledger.sh  build_vault_structure.py  lint.py  person_claims.py
scripts/intelligence/tests/: test_thesis_falsifiers.py  (+1 more)
scripts/podcasts/: backfill.sh  backfill_from_gaps.py  build_links.py  consolidate_world_context.py  enumerate_depth_gaps.py  enumerate_inrange.py  fetch_rss_episode.py  fetch_transcript.py  master_backfill.sh  shows.example.json  synth_episode.sh  verify_cutoff_coverage.py  write_world_context_note.py
scripts/sources/: x-bookmarks.sh
scripts/youtube_likes/: run.sh  select_candidates.py  synth_like.sh
secrets.example/: README.md
tests/: test_agent_ready.py
tools/xtap/: README.md  pyproject.toml
tools/xtap/src/xtap/: __init__.py  audit.py  auth.py  cli.py  client.py  paths.py  store.py
