[project]
name = "xtap"
version = "0.2.0"
description = "xtap: tap X for the brain — archive, search, and RAG source. CLI (vendored from ArtSabintsev/xtrim, web dashboard excluded)."
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Arthur Ariel Sabintsev" }]
dependencies = [
  "twscrape[curl]>=0.17",
  "browser-cookie3>=0.19",
  "httpx>=0.27",
  "rich>=13.7",
  "typer>=0.12",
]

[project.scripts]
xtap = "xtap.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xtap"]
